# nucobot

./: .gitattributes  LICENSE  README.md
contrib/: INSTALL.py  common.py  eclipse_deploy.py  opencv_deploy.py
contrib/eclipse_deploy/: eclipse.ini
firmware/: nucobot_arduino.ino
firmware/arduino_libs/DualVNH5019MotorShield/: DualVNH5019MotorShield.h
firmware/arduino_libs/IMU/: IMU.cpp  IMU.h  README.md  keywords.txt
firmware/arduino_libs/IMU/examples/SerialRead/: SerialRead.ino
firmware/nucobot_APM/: nucobot_APM.ino
firmware/nucobot_arduino_VNH5019/: nucobot_arduino_VNH5019.ino
firmware/nucobot_arduino_VNH5019/DualVNH5019MotorShield/: DualVNH5019MotorShield.cpp
firmware/nucobot_arduino_imu/: nucobot_arduino_imu.ino
src/camera_driver/: camera_driver.cpp  package.xml
src/examples/marker_detector/: package.xml
src/examples/optical_flow/: package.xml
src/fake_towermap/: CMakeLists.txt  fake_towermap.py  main.cpp  package.xml
src/nucobot_2dnav/: CMakeLists.txt  package.xml
src/nucobot_2dnav/launch/: gmapping_demo.launch  hector_mapping_demo.launch  move_base.launch  nucobot_configuration.launch
src/nucobot_2dnav/launch/includes/: hector_mapping.launch.xml  move_base.launch.xml
src/nucobot_2dnav/maps/: eurobot_arena.pgm  eurobot_arena.yaml  map_gen.py
src/nucobot_2dnav/param/: costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
src/nucobot_2dnav/param/lisa/: costmap_common_params.yaml
src/nucobot_2dnav/param/nucobot-2/: base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  move_base_params.yaml  navfn_global_planner_params.yaml
src/nucobot_2dnav/param/pikea/: costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/nucobot_2dnav/rviz/: gmapping_demo.rviz
src/nucobot_action/: CMakeLists.txt  action_client.py  action_server.cpp  action_server.h  main.cpp  package.xml
src/nucobot_action/action/: AchieveTarget.action
src/nucobot_bringup/: CMakeLists.txt  package.xml
src/nucobot_bringup/launch/: 3dsensor.launch  minimal.launch  test_wheel_odometry.launch
src/nucobot_bringup/launch/includes/: description.launch.xml  mobile_base.launch.xml  robot.launch.xml
src/nucobot_bringup/launch/includes/bertha/: mobile_base.launch.xml
src/nucobot_bringup/launch/includes/lisa/: mobile_base.launch.xml
src/nucobot_bringup/launch/includes/pikea/: mobile_base.launch.xml
src/nucobot_bringup/launch/includes/test_base/: mobile_base.launch.xml
src/nucobot_gazebo/: CMakeLists.txt  package.xml
src/nucobot_gazebo/launch/: nucobot.launch
src/nucobot_gazebo/worlds/: nucobot.world
src/nucobot_hardware_drivers/camera_driver/: CMakeLists.txt  camera_driver.cpp  package.xml
src/nucobot_hardware_drivers/camera_driver/launch/: camera_driver.launch
src/nucobot_hardware_drivers/imu_driver/: CMakeLists.txt  package.xml
src/nucobot_hardware_drivers/imu_driver/src/: imu_driver_node.cpp
src/nucobot_hardware_drivers/odometry_driver/: CMakeLists.txt  odometry_hw2ros_driver.cpp  package.xml
src/nucobot_hardware_drivers/odometry_driver/launch/: odometry_driver.launch
src/nucobot_hardware_drivers/odometry_driver_optical/: CMakeLists.txt  mice.py  odometry_opt_hw2ros_driver.cpp  package.xml
src/nucobot_hardware_drivers/odometry_driver_optical/launch/: odometry_optical_driver.launch  optical_odometry_test.rviz  test_odometry_optical.launch
src/nucobot_hardware_drivers/odometry_driver_wheel/: CMakeLists.txt  odometry_wheel_driver.cpp  package.xml
src/nucobot_hardware_drivers/odometry_driver_wheel/launch/: odometry_wheel_driver.launch  wheel_odometry_test.rviz
src/nucobot_simulator/custom_plugin_tutorial/: CMakeLists.txt  package.xml
src/nucobot_simulator/nucobot_control/: CMakeLists.txt  package.xml
src/nucobot_simulator/nucobot_control/config/: nucobot_control.yaml
src/nucobot_simulator/nucobot_control/launch/: nucobot_control.launch  nucobot_rqt.launch  nucobot_rqt.perspective
src/nucobot_simulator/nucobot_description/: CMakeLists.txt  package.xml
src/nucobot_simulator/nucobot_description/bertha/meshes/: body.dae  left_wheel.dae  right_wheel.dae
src/nucobot_simulator/nucobot_description/bertha/urdf/: bertha.urdf.xacro  kinect_camera.urdf.xacro
src/nucobot_simulator/nucobot_description/launch/: gazebo.rviz  nucobot.rviz  nucobot_rviz.launch
src/nucobot_simulator/nucobot_description/lisa/urdf/: kinect_camera.urdf.xacro  lisa.urdf.xacro
src/nucobot_simulator/nucobot_description/map_objects/meshes/: cylinder.dae  pop_corn_ball.dae  tennis_ball.dae
src/nucobot_simulator/nucobot_description/sdf/: model.config  model.sdf  model.urdf  model.xacro
src/nucobot_simulator/nucobot_description/urdf/: nucobot.gazebo  nucobot.urdf  nucobot.urdf.xacro  nucobot.xacro  tower.gazebo  tower.xacro  wheel.urdf.xacro
src/nucobot_simulator/nucobot_gazebo/: CMakeLists.txt  package.xml
src/nucobot_simulator/nucobot_gazebo/launch/: bertha_shapes_world.launch  lisa_shapes_world.launch  nucobot.launch  nucobot_shapes_world.launch  nucobot_world.launch  pikea_shapes_world.launch  spawn_beacons.launch  spawn_bertha.launch  spawn_lisa.launch  spawn_nucobot.launch  spawn_pikea.launch  spawn_toys.launch
src/nucobot_simulator/nucobot_gazebo/launch/include/: spawn_beacon.launch  spawn_cup.launch  spawn_cylinder.launch  spawn_pop_corn_ball.launch  spawn_tennis_ball.launch
src/nucobot_simulator/nucobot_gazebo/worlds/: nucobot.world  shapes.world
src/nucobot_simulator/nucobot_gazebo/worlds/Media/models/: eurobot_arena.dae
src/nucobot_simulator/nucobot_simulator/: CMakeLists.txt  package.xml
src/nucobot_simulator/nucobot_simulator/launch/: nucobot_simulator.launch
src/nucobot_simulator/nucobot_teleop/: CMakeLists.txt  package.xml
src/nucobot_simulator/nucobot_teleop/launch/: nucobot_teleop.launch
src/wheel_driver/: CMakeLists.txt  package.xml  wheel_driver.cpp
src/wheel_driver/msg/: WheelBaseState.msg  WheelState.msg
(+39 files in other folders)
