<package>
  <name>nucobot_bringup</name>
  <version>0.1.0</version>
  <description>
     nucobot_bringup provides roslaunch scripts for starting the Nucobot base functionality. 
  </description>
  <author>Anton Mitrokhin</author>
  <maintainer email="anton.mitrokhin@phystech.edu">ncos</maintainer>

  <license>GPLv3</license>
  <buildtool_depend>catkin</buildtool_depend>


  <run_depend>openni_launch</run_depend>
  <run_depend>linux_hardware</run_depend>
  <run_depend>depthimage_to_laserscan</run_depend>
</package>
