<?xml version="1.0"?>
<package>
  <name>imu_driver</name>
  <version>0.9.0</version>
  <description>The imu_driver package</description>
  <maintainer email="gusarov.aa@gmail.com">thar0l</maintainer>
  <license>GPLv2</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>
  </export>
</package>
